# Cynth

./: .clang-tidy  CMakeLists.txt  README.md  build.sh  main.cy
.cache/clangd/index/: main.c.8F884ABDC36CB308.idx
include/: bool.h  compiler.h  hash_operations.h  hashset.h  headers.h  list.h  map.h  primitive_map.h  safefree.h  sha256.h  token_types.h
src/: compiler.c  hash_operations.c  list.c  main.c  sha256.c  token_types.c
